Revision history for Perl extension Text::Format.

0.59
    - Add the missing README to the distribution (CPANTS).
    - Add a LICENSE file (CPANTS).

0.58 Tue  4 Sep 23:04:11 IDT 2012
    - Apply a patch to correct a minor grammatical error:
        - https://rt.cpan.org/Ticket/Display.html?id=79400
        - Thanks to Salvatore Bonaccorso, Debian Perl Group.

0.57 Tue  4 Sep 14:01:10 IDT 2012
    - Clarified the documentation regarding noBreak and noBreakRegex.
        - Thanks to Anne Wainwright.

0.56 Thu May 31 09:23:26 IDT 2012
    - Add "use warnings;" to lib/Text/Format.pm .
    - Add t/pod.t .
    - Add t/pod-coverage.t .

0.55 Thu May 31 09:17:32 IDT 2012
    - Fix small spelling error in the POD:
        - closing https://rt.cpan.org/Ticket/Display.html?id=77481
        - Thanks to Salvatore Bonaccorso and the Debian people
        for the report and the patch.
        - ( There were also some duplicate bug report in the rt.cpan.org queue
        by accident. )

0.54 Fri May 25 02:33:47 IDT 2012
    - Convert t/justify.t and t/format.t to Test::More, "use strict;"
    and "use warnings;" and cleaned them up.
        - fix a warning generated by a call to defined(@array)
            - https://rt.cpan.org/Ticket/Display.html?id=77413
            - thanks to H. Merijn Brand for the report.
0.53 Fri Jan 28 13:02:01 IST 2011
    - Adopted by Shlomi Fish (while disclaiming all rights).
    - Convert the build system to Module-Build, while adding keywords
    and resources.
    - The archive name is now the more standard Text-Format-0.53.tar.gz.
    - Fix some typos in the documentation.

0.52 Sun Mar 29 11:32:50 1998
    - fixed some warnings that appeared when using hanging indents
      (tagged paragraphs).  Also added tha ability to use a list
      as an argument to new() and config() so you can pass a hash ref or
      a list as long as the list length is mod 2 == 0

0.51 Tue Feb 24 13:32:22 1998